Ajustments and delete workout - New workout item design - Chronometer Fragment layout adjustments - Workout flow ajustments - Delete workout feature

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,10 +20,11 @@
         android:id="@+id/list_view_workouts"
         android:layout_width="match_parent"
         android:layout_height="@dimen/workouts_list_height"
+        android:divider="@null"
         app:layout_constraintBottom_toTopOf="@id/button_new"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_new"
