--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,18 +8,22 @@
     <dimen name="workouts_list_height">350dp</dimen>
     <dimen name="workout_text_size">15sp</dimen>
     <dimen name="workout_item_padding">10dp</dimen>
-    <dimen name="time_text_size">50sp</dimen>
+    <dimen name="workout_final_text_size">35sp</dimen>
     <dimen name="week_item_padding">10dp</dimen>
     <dimen name="tv_week_size">25sp</dimen>
-    <dimen name="tv_week_item_size">15sp</dimen>
-    <dimen name="tv_week_item_margin_end">10dp</dimen>
+    <dimen name="tv_week_item_size">12sp</dimen>
+    <dimen name="tv_week_item_margin_end">5dp</dimen>
     <dimen name="layout_time_height">350dp</dimen>
     <dimen name="card_radius">10dp</dimen>
     <dimen name="workout_label_size">12sp</dimen>
-    <dimen name="workout_item_layout_height">90dp</dimen>
+    <dimen name="workout_item_layout_height">110dp</dimen>
     <dimen name="workout_item_margin">5dp</dimen>
     <dimen name="workout_status_icon_size">50dp</dimen>
     <dimen name="warm_up_text_size">20sp</dimen>
     <dimen name="settings_padding">10dp</dimen>
     <dimen name="warm_up_edit_text_marginStart">10dp</dimen>
+    <dimen name="tv_week_info_size">13sp</dimen>
+    <dimen name="tv_time_marginEnd">10dp</dimen>
+    <dimen name="tv_action_marginBottom">10dp</dimen>
+    <dimen name="tv_time_size">15sp</dimen>
 </resources>
