--- a/app/src/main/res/layout/fragment_chronometer.xml
+++ b/app/src/main/res/layout/fragment_chronometer.xml
@@ -24,8 +24,7 @@
             android:id="@+id/text_view_week_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/tv_week_item_margin_end"
-            android:textSize="@dimen/tv_week_item_size" />
+            android:textSize="@dimen/tv_week_info_size" />
     </LinearLayout>
 
     <LinearLayout
@@ -42,15 +41,6 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/sets_text_size" />
 
-
-        <TextView
-            android:id="@+id/text_view_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/time_text_size"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
         <Chronometer
             android:id="@+id/chronometer"
             android:layout_width="wrap_content"
@@ -62,7 +52,44 @@
             android:id="@+id/text_view_action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/tv_action_marginBottom"
             android:textSize="@dimen/action_text_size" />
+
+        <TextView
+            android:id="@+id/text_view_time_final"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/workout_final_text_size"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/text_view_distance_final"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/workout_final_text_size"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/text_view_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/tv_time_marginEnd"
+                android:textSize="@dimen/tv_time_size" />
+
+            <TextView
+                android:id="@+id/text_view_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/tv_time_size" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
