--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,6 @@
     <dimen name="tv_time_marginEnd">10dp</dimen>
     <dimen name="tv_action_marginBottom">10dp</dimen>
     <dimen name="tv_time_size">15sp</dimen>
+    <dimen name="layout_floating_margin">10dp</dimen>
+    <dimen name="button_new_marginBottom">10dp</dimen>
 </resources>
