--- a/app/src/main/res/drawable/card.xml
+++ b/app/src/main/res/drawable/card.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#E8E8E8" />
+    <solid android:color="@color/card_background" />
 
     <corners
         android:bottomLeftRadius="@dimen/card_radius"
