--- a/app/src/main/res/layout/list_item_workout.xml
+++ b/app/src/main/res/layout/list_item_workout.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/workout_item_padding">
 
     <LinearLayout
@@ -167,7 +168,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/workout_item_margin"
                 android:contentDescription="@string/delete"
-                android:src="@drawable/ic_delete" />
+                android:backgroundTint="@color/card_background"
+                app:srcCompat="@android:drawable/ic_delete" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
